# Retriqs

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2ab8f1d4c7e0_add_is_pinned_to_retrieval_chats.py  6b0f6f9a4f3b_expand_storage_path_columns.py  9e1a1b9f4c2d_add_retrieval_chat_history_tables.py  d053498dcad0_initial_schema.py
retriqs/: __init__.py  base.py  constants.py  exceptions.py  operate.py  prompt.py  rerank.py  retriqs.py  utils.py  utils_ollama_fix.py
retriqs/api/: config.py  dependencies.py  edition.py  gunicorn_config.py  mcp_api.py  mcp_support.py  openai_codex_auth.py  retriqs_server.py  run_with_gunicorn.py  storage_archive.py  storage_paths.py  utils_api.py
retriqs/evaluation/: __init__.py  eval_rag_quality.py
retriqs/kg/: __init__.py  faiss_impl.py  grafeo_impl.py  json_doc_status_impl.py  json_kv_impl.py  memgraph_impl.py  milvus_impl.py  mongo_impl.py  nano_vector_db_impl.py  neo4j_impl.py  networkx_impl.py  postgres_impl.py  redis_impl.py  shared_storage.py
retriqs/llm/: anthropic.py  azure_openai.py  bedrock.py  binding_options.py  gemini.py  (+11 more)
retriqs_webui/: README.md  env.development.smaple  env.local.sample  index.html  package.json  posthog-setup-report.md  vite.config.ts
retriqs_webui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
retriqs_webui/src-tauri/icons/: icon.icns
retriqs_webui/src-tauri/src/: lib.rs
retriqs_webui/src-tauri/windows/: generate-installer-assets.ps1  installer-template.nsi
retriqs_webui/src-tauri/windows/nsis/: English.nsh
(+87 files in other folders)
